api should be implemented in client and backend
